--- a/.vscode/requirements.txt
+++ b/.vscode/requirements.txt
@@ -1,5 +1,5 @@
 Version 1
-[] It should have a place to store data 
+[X] It should have a place to store data 
 [] It should have a way to display todos
 [] It should have a way to add a todo
 [] It should have a way to edit a todo
